GNOME Bugzilla – Bug 710754
GtkModelMenu: don't leak submenus
Last modified: 2013-10-25 14:15:20 UTC
This is against gtk+ 3.8.3, before GtkMenuTracker was introduced (which already fixed this issue). See patch for a detailed description.
Created attachment 257969 [details] [review] GtkModelMenu: don't leak submenus gtk_container_remove_child() is not enough to break the reference cycle between the removed menu item and the submenu that is attached to it. Use gtk_widget_destroy() instead.
Review of attachment 257969 [details] [review]: ok
Attachment 257969 [details] pushed as 37675d8 - GtkModelMenu: don't leak submenus