gtk/gtkmodelmenu.c
@@ -194,7 +194,7 @@ gtk_model_menu_binding_populate (GtkModelMenuBinding *binding)
   children = gtk_container_get_children (GTK_CONTAINER (binding->shell));
   while (children)
     {
-      gtk_container_remove (GTK_CONTAINER (binding->shell), children->data);
+      gtk_widget_destroy (children->data);
       children = g_list_delete_link (children, children);
     }
 
